style.css
@import url('https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&display=swap');

/* General Page Styles */
body, html {
	font-family: "Fustat", "Helvetica", sans-serif;
	color: white;
	background-color: #171717;
	overflow-x:hidden;
	width: 100%;
	min-width: 100%;
	max-width: 100%;
	padding: 0;
	margin: 0;
	}


* {
    box-sizing: border-box; /* Include padding and border in element's width/height */
}

p {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}


/* Player Container */
.player {
	background-color: #171717;
	width: 80%;
	min-width: 80%;
	max-width: 80%;
	margin: 0 auto;
	height:65vh;
	display:flex;
	flex-direction: row-reverse;
	justify-content: center;
	align-items: center;
}

.intro {
	font-size: 16x;
	max-width:50%;
	width:50%;
	margin:0 auto;
	padding: 15px;
}

#link-to-albums {
	display:block;
	width:100%;
	margin 0: auto;
	font-size: 24px;
	text-align:center;
}

/* Cover Art */
.cover-art {
	width:50%;
	text-align:center;
}

.cover-art img {
	display: inline;
	width: 256px;
	max-width: 256px;
}

.player-container {
	background-color: #171717;
	padding: 10px;
	gap: 25px;
	box-sizing: border-box;
	display: flex;
	align-items: center;
	justify-content: space-around;
	flex-direction: column;
	position: fixed;
	bottom:0;
	left:0;
	width:100%;
	max-width:100%;
	padding:10px;
	z-index: 10;
	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
	backdrop-filter: blur(6px);
	background-color: #171717ba;
	border-top:1px solid #ffffffe9;
}

mark {
	background-color: #FFBD59;
	color:#171717;
}

.controls {
	font-family: 'Fustat', "Helvetica", sans-serif;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 8px;
	max-width:60%;
	width:60%;
}

.play-pause {
	font-family: 'Fustat', "Helvetica", sans-serif;
	align-items: center;
	appearance: none;
	background-color: #FCFCFD;
	border-radius: 4px;
	border-width: 0;
	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
	box-sizing: border-box;
	color: #36395A;
	cursor: pointer;
	display: inline-flex;
	height: 48px;
	justify-content: center;
	line-height: 1;
	list-style: none;
	overflow: hidden;
	width: 110px;
	position: relative;
	text-align: left;
	text-decoration: none;
	transition: box-shadow .15s, transform .15s;
	user-select: none;
	-webkit-user-select: none;
	touch-action: manipulation;
	white-space: nowrap;
	will-change: box-shadow, transform;
	font-size: 18px;
}

.play-pause:active {
	box-shadow: #405cf5 0 3px 7px inset;
	transform: translateY(2px);
}

#play-btn {
	flex-basis: 100%;
}

/*********** Baseline, reset styles ***********/
input[type="range"] {
	-webkit-appearance: none;
	appearance: none;
	background: transparent;
	cursor: pointer;
	width: 100%;
}

/* Removes default focus */
input[type="range"]:focus {
	outline: none;
}

/******** Chrome, Safari, Opera and Edge Chromium styles ********/
/* slider track */
input[type="range"]::-webkit-slider-runnable-track {
	background-color: #008040;
	border-radius: 100px;
	height: 3px;
}

/* slider thumb */
input[type="range"]::-webkit-slider-thumb {
	-webkit-appearance: none;
	/* Override default look */
	appearance: none;
	margin-top: -4.5px;
	/* Centers thumb on the track */
	background-color: #fff;
	border-radius: 1rem;
	height: 12px;
	width: 12px;
}

input[type="range"]:focus::-webkit-slider-thumb {
	outline: 3px solid #fff;
	outline-offset: 0.125rem;
}

/*********** Firefox styles ***********/
/* slider track */
input[type="range"]::-moz-range-track {
	background-color: #008040;
	border-radius: 100px;
	height: 3px;
}

/* slider thumb */
input[type="range"]::-moz-range-thumb {
	background-color: #fff;
	border: none;
	/*Removes extra border that FF applies*/
	border-radius: 1rem;
	height: 12px;
	width: 12px;
}

/* Default state for the drawer (hidden) */
.comment-drawer {
	position: fixed;
	top: 0;
	right: -300px;
	display:none;
	/* Hidden off-screen */
	width: 300px;
	height: 100%;
	background-color: #171717;
	transition: right 0.3s ease;
	overflow-y: hidden;
	/* Enable scrolling within the drawer */
	box-sizing: border-box;
	border-left:1px solid #1E1E1E;
	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
	z-index: 20;
}

/* Show the drawer when the open button is clicked */
.comment-drawer.open {
	right: 0;
	display: block;
}

#cusdis_thread {
	height:500px;
	color:#fff;
  }

  #cusdis_thread > iframe {
	height:100vh;
	color:#fff;
  }

.close-drawer-header {
	position:sticky;
	top:0;
	left:0;
	width:100%;
	text-align:center;
	padding:15px;
	display:flex;
	align-items: center;
	justify-content: center;
	backdrop-filter: blur(6px);
}

.close-drawer-header > button {
	border:none;
	font-family:"Fustat", "Helvetica", Arial, sans-serif;
	background: none;
	color:#fff;
	width:60%;
	text-align:center;
	cursor:pointer;
	text-decoration: underline;
}

.schedule-drawer {
	position: fixed;
	top: 0;
	display:none;
	/* Hidden off-screen */
	width: 100%;
	height: 100vh;
	background-color: #171717f1;
	backdrop-filter: blur(6px);
	transition: right 0.3s ease-in;
	overflow-y:scroll;
	/* Enable scrolling within the drawer */
	box-sizing: border-box;
	box-shadow: rgba(90, 88, 88, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
	z-index:15;
}

/* Show the drawer when the open button is clicked */
.schedule-drawer.open {
	left: 0;
	display: block;
}

.schedule-drawer > .container {
	width:100%;
	padding:10px 15px;
	display: grid;
  	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
	gap:15px;
	font-size:14px;
}

.day-container {
	width:100%;
	color:#fff;
	border-radius:4px;
	padding: 12px;
	background-color:#1E1E1E;
	box-shadow: rgba(90, 88, 88, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
	display: flex;
	flex-direction: column;
	gap: 5px;
  }

  #general-rotation {
	background-color: #FFBD59;
	color:#333;
  }
  
  .day-title {
	margin-bottom:10px;
	font-size:16px;
	font-weight:bold;
	text-transform: uppercase;
  }
  
  .schedule-container {
	display:flex;
  }

  .schedule {
	width:40%;
  }

  .show {
	width:60%;
	text-align:right;
  }

/* Modal Styles */
#song-modal {
	display: none;
	gap:10px;
	align-items: center;	
	border-radius:4px;
	padding: 10px;
	background-color:#1E1E1E;
	box-shadow: rgba(90, 88, 88, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
	text-align:left;
	max-width:60%;
	width:60%;
	max-height:120px;
	height:120px;
}

#close-modal {
	cursor: pointer;
	position: relative;
}

#song-art {
	border-radius:4px;
	height:100%;
	width:auto;
}

.song-details {
	display:flex;
	flex-direction: column;
	width:auto;
	flex-basis: 100%;
}

#song-title {
	font-size:16px;
	font-weight:bold;
	width:100%;
	max-width:100%;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

#song-artist {
	font-size:14px;
	width:100%;
	max-width:100%;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	
}

#song-disclaimer {
	margin-top:12px;
	font-size:10px;
	text-transform: uppercase;
	color:#c0bcbc;
}

#song-modal > #close-modal {
	width:10%;
	text-align:center;
}

/* ----------------------- BEST ALBUMS SECTION -----------------------*/

.headline {
	width:30%;
	padding-right:14px;
	text-align: right;
	background-color: #FFBD59;
	color:#171717;
}

#albums-container {
    width:100%;
	padding:0px 20px 20px 20px;
	display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	gap: 1.5rem;
}

.album {
    width:100%;
    color:#fff;
    background-color:#2d2a2a;
    border-radius: 4px;
	border:1px solid #fff;
	padding-bottom:16px;
}

.album-cover {
    width:100%;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
	border:1px solid #fff;
}

.cover-rating {
	position:relative;
}

.rating {
	position: absolute;
	top:0px;
	right:0px;
	padding:5px;
	border-bottom-left-radius:4px;
	border-top-right-radius: 4px;
	z-index:1;
	font-size: 0.7em;
	background-color:#fff;
	color:#333;
}

.album-details {
	padding:4px 8px;
	font-size: 1em;
}

.additional-info {
	display:flex;
	justify-content: space-between;
	font-size: 0.7em;
	color: #FFBD59;
	text-transform: uppercase;
	font-weight:bold;
}

.main-info {
	padding:12px 0px 18px 0px;
}

.album-name {
	font-weight:bold;
	font-size:1.2em;
}

.album-link {
  background-color: #13aa52;
  border: 1px solid #13aa52;
  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
  font-size: 16px;
  font-weight: 400;
  outline: none;
  outline: 0;
  padding: 10px 25px;
  text-align: center;
  transform: translateY(0);
  transition: transform 150ms, box-shadow 150ms;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.album-link:hover {
  box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
  transform: translateY(-2px);
}

a, a:visited {
	color:inherit;
	text-decoration: none;
	font-family: 'Fustat', "Helvetica", sans-serif;
}


/* For mobile devices */
@media (max-width: 820px) {

	body {
		margin:0;
		padding:0;
	}

	.headline {
		width:100%;
		text-align: center;
		background-color: #FFBD59;
		color:#171717;
		padding-right:0px;
	}

	.headline {
		display:flex;
		align-items: center;
		justify-content: center;
		margin-bottom:20px;
		color:#171717;
		background-color: #FFBD59;
	}

	.player {
		width:100%;
		margin-bottom:40px;
	}
	
	.player {
		flex-direction: column;
		height:auto;
		width:100%;
		align-items: center;
		justify-content: center;
	}

	.intro {
		width:100%;
		text-align:center;
	}

	#link-to-albums {
		display:none;
	}
	
	.comment-drawer {
		width: 100%;
		/* 100% width for mobile */
		overflow-x: hidden;
		box-shadow: none;
	}

	.schedule-drawer > .container {
		font-size: 16px;
	}

	.intro, .controls, .volume-slider, #song-modal {
		width:100% !important;
		max-width:100% !important;
	}

	.intro {
		font-size:16px;
	}

	.modal {
		padding: 30px;
	}

}

